--- a/src/Components/NavBar.module.css
+++ b/src/Components/NavBar.module.css
@@ -1,3 +1,14 @@
+*,*::after,*::before{
+}
 .navBar {
   display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.navOpen {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  background-color: #4a4564;
 }
