migrado a react sin vite
porque no me enteraba de una chota

--- a/src/Components/NavBar.module.css
+++ b/src/Components/NavBar.module.css
@@ -1,9 +1,10 @@
-*,*::after,*::before{
-}
+
 .navBar {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  background-color: #4a4564;
+
 }
 
 .navOpen {
