--- a/src/Components/Step.module.css
+++ b/src/Components/Step.module.css
@@ -6,19 +6,19 @@
 
 .stepNumber {
   font-size: 5em;
-  color: #f1f1f1;
+  color: #e4e6eb;
   font-weight: 600;
 }
 
 .text {
   font-size: 2em;
-  color: #f1f1f1;
+  color: #e4e6eb;
   text-align: center;
 }
 
 .stepBorder {
   height: 0.25em;
-  background-color: #356161;
+  background-color: #6fcf97;
   width: 60%;
 }
 .stepContainer {
@@ -26,7 +26,23 @@
   flex-direction: column;
   align-items: center;
 }
-@media (min-width: 800px) {
+
+@media (min-width: 2560px) {
+  .stepContainer {
+    display: flex;
+    flex-direction: row;
+  }
+  .stepNumber {
+    padding-right: 1.25em;
+    font-size: 4em;
+  }
+  .text {
+    font-size: 4em;
+    color: #e4e6eb;
+    text-align: center;
+  }
+}
+@media (min-width: 800px) and (max-width: 2559px) {
   .stepContainer {
     display: flex;
     flex-direction: row;
@@ -34,4 +50,5 @@
   .stepNumber {
     padding-right: 1.25em;
   }
+  
 }
