--- a/src/Screens/Contact.module.css
+++ b/src/Screens/Contact.module.css
@@ -1,7 +1,7 @@
 .contact {
   display: flex;
-  padding-top: 6.25em;
-  padding-bottom: 6.25em;
+  padding-top: 0.25em;
+  padding-bottom: 1.25em;
   background: linear-gradient(180deg, #102a43, #243b53);
   flex-direction: column;
   align-items: center;
@@ -54,10 +54,11 @@
   margin-top: 1.25em;
 }
 @media (min-width: 2560px) {
-  input, textarea {
+  input,
+  textarea {
     font-size: 3em;
     padding-left: 0.5em;
-  }  
+  }
   .contact h2 {
     font-size: 7em;
   }
@@ -70,7 +71,7 @@
     border: 5px solid #2e4756;
     width: 50%;
     height: 20em;
-    padding-top:0.5em;
+    padding-top: 0.5em;
   }
   .form button {
     font-size: 3em;
