--- a/src/Components/NavBar.module.css
+++ b/src/Components/NavBar.module.css
@@ -1,3 +1,6 @@
+li {
+  list-style: none;
+}
 .navOnScroll {
   transition: 0.5s;
   position: fixed;
@@ -66,6 +69,9 @@
   font-weight: 600;
 }
 @media (min-width: 2560px) {
+  li {
+    list-style: none;
+  }
   .logo {
     font-size: 3em;
   }
@@ -128,6 +134,9 @@
 }
 
 @media (min-width: 959px) and (max-width: 2559px) {
+  li {
+    list-style: none;
+  }
   .logo {
     font-size: 1.5em;
   }
